--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,21 @@
-/* src/index.css */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+ /* Ancho y color del scrollbar */
+ ::-webkit-scrollbar {
+    width: 7px;
+    height: 10px;
+    background-color: #f5f5f5;
+  }
+  
+  /* Estilo del scrollbar */
+  ::-webkit-scrollbar-thumb {
+    background-color: #a5a5a5;
+    border-radius: 10px;
+  }
+  
+  /* Estilo del scrollbar al pasar el mouse */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: gray;
+  }
+
+  .disable-modal {
+    overflow: hidden;
+  }
